test/fixtures/themes/002-comment-id/invalid/post.hbs
{{#get "posts" filter="tags:{{tags.[0].slug}}+id:-{{id}}" limit="3" as |related_posts|}}
{{/get}}
